--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -32,6 +34,10 @@ android {
 
     viewBinding {
         enabled = true
+    }
+
+    androidExtensions {
+        experimental = true
     }
 }
 
